# KartingGroningen

./: .gitignore  Cargo.toml  Rocket.toml  docker-compose.yaml  docker-compose.yml
backend/: Cargo.toml  Rocket.toml
backend/migrations/2022-12-29-224022_create_heats/: down.sql  up.sql
backend/migrations/2022-12-29-225309_create_drivers/: down.sql  up.sql
backend/migrations/2022-12-29-230254_create_laps/: up.sql
backend/migrations/2022-12-29-231912_create_karts/: down.sql  up.sql
backend/migrations/2023-01-26-182706_skill-ratings/: down.sql
backend/src/: errors.rs  heats.txt  lib.rs  schema.rs
backend/src/macros/: database_error_handeler.rs  redis.rs  request_caching.rs
backend/src/modules/: heat_api.rs  mod.rs  redis.rs
backend/src/modules/helpers/: general.rs  heat.rs  logging.rs
backend/src/modules/models/: driver.rs  general.rs  lap.rs
backend/src/routes/api/: driver.rs
desktop/: Cargo.toml
desktop/src/: main.rs  main_bak.rs
front-end/static/js/: colorGenerator.js
front-end/static/js/chartjs/: chartjs.min.js
front-end/static/js/heats/: allKartLapChart.js  allLapTimesPlot.js  lapBarChart.js  lapTimeChart.js  timeLineChart.js
front-end/templates/: all.html.hbs  driver.html.hbs  heat.html.hbs  index.html.hbs  kart.html.hbs
front-end/templates/common/components/: navbar.html.hbs
front-end/templates/common/script_blocks/: chart.html.hbs  sortable_tables.html.hbs
frontend/: .env  Dockerfile
frontend/src/: index.tsx
frontend/src/components/charts/: laptimeChart.tsx
frontend/src/components/hero/: cta.tsx  hero.module.css.d.ts
frontend/src/routes/: AllPage.tsx  Dashboard.tsx  HomePage.tsx  detailPage.tsx  kartPage.tsx
lib/migration/src/: schema_dump.sql
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2022-12-29-230254_create_laps/: down.sql  up.sql
migrations/2022-12-29-231912_create_karts/: up.sql
migrations/2023-01-26-182706_skill-ratings/: up.sql
nginx/: nginx.conf
react-frontend/: package-lock.json  package.json
react-frontend/src/: index.tsx
react-frontend/src/routes/: AllPage.tsx  detailPage.tsx  kartPage.tsx
src/: cron_jobs.rs  errors.rs  heats.txt  lib.rs  main.rs  models.rs  schema.rs
src/macros/: redis.rs  request_caching.rs
src/modules/: heat_api.rs  mod.rs  redis.rs
src/modules/helpers/: driver.rs  general.rs  heat.rs  lap.rs  logging.rs  math.rs
src/modules/helpers/handelbars/: format.rs  (+6 more)
src/modules/models/: driver.rs  general.rs  heat.rs  kart.rs  lap.rs
src/routes/: driver.rs  heat.rs  kart.rs
src/routes/api/: driver.rs  heat.rs  kart.rs
static/js/heats/: createAllKartLapChart.js  createAllLapTimesPlot.js  createLapTimeChart.js  createTimeLineChart.js
templates/: all_heats.html.hbs  all_karts.html.hbs  heat.html.hbs  index.html.hbs  kart.html.hbs
templates/common/components/: navbar.html.hbs
templates/common/script_blocks/: chart.html.hbs  sortable_tables.html.hbs  tailwind.html.hbs
(+16 files in other folders)
