[package]
name = "karting_groningen_analytics"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
env_logger = "0.10.0"
log = "0.4.17"
chrono = { version = "0.4.23", features = ["serde"] }

reqwest = { version="0.11.13", default-features=false, features=["blocking"] }
tokio = { version = "1.23.0", features = ["full"] }
substring = "1.4.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"

# rocket depencies
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rocket_contrib = { version = "0.4.11", default-features=false, features = ["serve"] }
