[package]
name = "karting_groningen_analytics"
version = "0.1.0"
edition = "2021"


[dependencies]
diesel = { version = "2.0", features = ["postgres", "chrono"] }
redis= "0.22"

dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"

reqwest = { version="0.11", default-features=false, features=["blocking"] }
tokio = { version = "1.23", features = ["full"] }
substring = "1.4.*"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
inflections = "1.1"

# rocket depencies
rocket = { version="0.5.0-rc.2", features= ["json"]}
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
rocket_contrib = { version = "0.4", default-features=false, features = ["serve"] }

tokio-cron-scheduler = { version = "*", features=["signal"] }

# custom modules
identifiable-derive = { version = "*", path = "src/macros/identifiable-derive" }
json-response-derive = {version = "*", path = "src/macros/json-response-derive" }
