[package]
name = "karting_groningen_analytics"
version = "0.1.0"
edition = "2021"


[dependencies]
# Databases/Caching
diesel = { version = "2.0", features = ["postgres", "chrono"] }
redis= "0.22"

# logging
log = "0.4"
fern = "0.6"
snafu = "0.7"

# http
reqwest = { version="0.11", default-features=false, features=["blocking"] }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# rocket depencies
rocket = { version="0.5.0-rc.2", features= ["json"]}
rocket_contrib = { version = "0.4", default-features=false, features = ["serve"] }

# String manipulation
regex = "1.7"
inflections = "1.1"
substring = "1.4.*"

# Other
chrono = { version = "0.4", features = ["serde"] }
skillratings = { version = "0.24", features=["serde"] }
dotenvy = "0.15"

# Async
tokio = { version = "1.23", features = ["full"] }
tokio-cron-scheduler = { version = "*", features=["signal"] }

# custom modules
identifiable-derive = { version = "*", path = "src/macros/identifiable-derive" }
json-response-derive = {version = "*", path = "src/macros/json-response-derive" }
